# Mobile-Computing-Project

./: CMakeLists.txt  README.md  Report.docx  main.cpp  services.cpp  ~WRL0003.tmp  代办.txt
final_project/: README.md  package-lock.json  package.json
final_project/src/: App.js  index.css  index.js
final_project/src/pages/: Apps.js  Home.js  Layout.js  Recipe.js  Relationships.js  Services.js  Things.js
flask/: IPAddr.txt  ServiceName.txt  ThingID.txt  app.py
flask/apps/: 123.txt  a.txt
pi/: main.py
